--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "google/apiclient": "^2.0",
+        "google/apiclient-services": "^0.314.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "spatie/laravel-google-calendar": "^3.6"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.9",
