--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "spatie/laravel-google-calendar": "^3.6"
+        "spatie/laravel-google-calendar": "^3.6",
+        "twbs/bootstrap": "5.3.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.9",
